--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
   jekyll:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       actions: read 
     steps:
       - name: Checkout 📂
