--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,29 +3,12 @@ updates:
   - package-ecosystem: "bundler"
     directory: "/"
     schedule:
-      interval: "daily"
-    commit-message:
-      prefix: "deps"
-      include: "scope"
-    labels:
-      - "dependencies"
-      - "ruby"
+      interval: "weekly"
     allow:
       - dependency-type: "direct"
       - dependency-type: "indirect"
-    ignore:
-      - dependency-name: "jekyll"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "jekyll-scholar"
-        update-types: ["version-update:semver-major"]
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-    commit-message:
-      prefix: "ci"
-      include: "scope"
-    labels:
-      - "dependencies"
-      - "github-actions"
+      interval: "weekly"
