--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,11 @@ jobs:
         run: |
           if [ "${{ github.ref_name }}" = "mobile" ]; then
             echo "Building mobile site with baseurl=/mobile..."
-            JEKYLL_ENV=production BASEURL="/mobile" RUBYOPT="-W0" bundle exec jekyll build --strict
+            # Temporarily update config for mobile build
+            sed -i 's/baseurl: ""/baseurl: "\/mobile"/' _config.yml
+            ./build.sh
+            # Restore original config
+            sed -i 's/baseurl: "\/mobile"/baseurl: ""/' _config.yml
           else
             ./build.sh
           fi
