--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,15 +27,23 @@ jobs:
         with:
           ruby-version: 3.4
 
-      - name: Install dependencies 📦
+      - name: Setup Node.js 🟢
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install Ruby dependencies 📦
         run: |
           gem install bundler --user-install
           bundle config set --local path 'vendor/bundle'
           bundle install
 
-      - name: Build 🔨
-        run: |
-          ./build.sh
+      - name: Install JavaScript dependencies 📦
+        run: npm ci
+
+      - name: Build production site 🔨
+        run: npm run build:production
         continue-on-error: false
 
       - name: Setup Pages
